Changes for release v0.3.2 RC2

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "rxjs": "6.1.0",
     "rxjs-compat": "6.1.0",
     "tslib": "1.9.3",
+    "yarn": "^1.17.3",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
@@ -74,15 +75,15 @@
     "mini-css-extract-plugin": "0.4.2",
     "mocha": "5.2.0",
     "moment-locales-webpack-plugin": "1.0.5",
-    "node-sass": "4.9.4",
+    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-loader": "2.1.1",
     "prettier": "1.11.1",
-    "protractor": "5.4.0",
+    "protractor": "5.4.2",
     "proxy-middleware": "0.15.0",
     "raw-loader": "0.5.1",
     "rimraf": "2.6.1",
-    "sass-loader": "7.1.0",
+    "sass-loader": "^7.1.0",
     "simple-progress-webpack-plugin": "1.1.2",
     "style-loader": "0.20.3",
     "tapable": "1.0.0",
